# python-cqrs

./: Dockerfile  README.md  fly.toml  main.py  pyproject.toml
src/: __init__.py
src/application/: __init__.py
src/application/handlers/: create_order.py  get_orders.py  order_created.py
src/domain/: __init__.py
src/domain/commands/: __init__.py  create_order.py
src/domain/events/: __init__.py  order_created.py
src/domain/queries/: __init__.py  get_orders.py
src/entrypoints/: __init__.py  cli.py  fastapi.py
src/infrastructure/: __init__.py  composition.py  container.py  mappers.py
src/infrastructure/adapters/: __init__.py  console_order_notifier.py
src/ports/: __init__.py  notifications.py
src/utils/: logger.py
