[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediatr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dependency-injector>=4.49.0",
  "di>=0.79.2",
  "fastapi[standard]>=0.136.1",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "python-cqrs>=4.10.1",
  "python-json-logger>=4.1.0",
  "uvicorn>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
